index.css
/* ... */
.grid_menu{
    grid-template-columns: repeat(2, 1fr);
    grid-template-columns: max-content auto;
    column-gap: 52px;
}

.footer_copyright{
    font-family: var(--secondary-ff);
    text-align: right;
    margin-top: 32px;
    margin-bottom: 20px;
}

.footer_copyright div{
    font-size: 12px;
}

.footer_copyright a{
    text-decoration: underline;
}

.footer_copyright > div{
    margin-bottom: 5px;
}


@media (max-width: 320px){

    .red_light{
        width: 211px;
        height: 210px;
        left: -55px;
        top: 353px;
        opacity: 0.3;
        filter: blur(196px);
    }

    .purple_light{
        width: 259px;
        height: 259px;
        left: 258px;
        top: 159px;
        opacity: 0.3;
        filter: blur(196px);
    }

    .yellow_light{
        display: block;
    }

    .red_ball_small{
        position: absolute;
        width: 43px;
        height: 43px;
        left: 29px;
        top: 460px;
    }

    .purple_ball{
        width: 40px;
        height: 40px;
        left: 296px;
        top: 288px;
        filter: blur(5px);
        backdrop-filter: blur(2px);
    }

    .glass{
        display: block;
    }

    .noise{
        display: block;
    }

    .wrapper{
        justify-content: start;
    }

    .header .container{
        padding: 0 16px;
    }


    .header{
        margin-top: 0;
        height: 55px;
        background-color: var(--main-bg-color);
        z-index: 1;
        padding: 17px 0;
    }
    
    .header_logo{
        display: none;
    }

    .contacts{
        display: none;
    }

    .nav{
        padding-left: 0;
        justify-content: space-between;
        width: 100%;
    }

    .nav_item{
        margin-right: 0;
        font-size: 12px;
        text-transform: uppercase;
    }

    .nav_item:last-child{
        display: none;

    }

    .main{
        padding-top: 41px;
        padding-bottom: 57px;
        height: 445px;
        flex-grow: 0;
    }

    .main_inner{
        flex-direction: column;
        justify-content: space-between;
    }

    .main_col{
        text-align: left;
    }

    .main_col-secondary{
        margin-top: 46px;
    }

    .text-gradient{
        text-transform: none;
        letter-spacing: normal;
    }

    .col_header{
        font-size: 36px;
        line-height: 43.57px;
    }

    .col_subtext{
        margin-top: 15px;
    }

    .col_grid{
        display: none;
    }

    .col_grid-mobile{
        margin-top: 17px;
        
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-columns: max-content auto;
        column-gap: 10px;
        row-gap: 8px;
    }

    .item_header{
        font-size: 13px;
        position: relative;
        font-family: var(--secondary-ff);
        letter-spacing: .65px;
    }

    .item_header::before{
        content: "";
        display: inline-block;
        width:10px;
        height:1px;
    
        background: linear-gradient(to right, #FCB045 0%, #FD1D1D 100%);
        margin-bottom: 5px;
        margin-right: 5px;  
        transition: .2s linear;
    }

    .col_btn{
        display: none;
    }

    .footer{
        padding-top: 40px;
        padding-bottom: 550px;
        background-color: var(--main-bg-color);
        z-index: 1;
    }

    .col-about,.col-menu,.col-contacts{
        width: 100%;
    }

    .col-menu{
        margin-top: 32px;
    }

    .col-contacts{
        margin-top: 32px;
        text-align: left;
    }

    .footer_col_header{
        font-size: 12px;
        width: 100%;
    }

    .footer_info{
        flex-direction: column;
    }

    .footer_item{
        font-size: 14px;
        margin-bottom: 11px;
    }

    .footer_item.phone{
        font-size: 16px;
    }

    .footer_item-contacts{
        align-self: start;
        margin-left: 4px;
    }

    .footer_contact{
        margin-right: 17px;
    }

    .footer_contact img{
        scale: 1.2;
    }

    .footer_grid{
        row-gap: 10px;
    }

    .grid_menu{
        grid-template-columns: repeat(2, 1fr);
        grid-template-columns: minmax(100px, 100px);
        column-gap: 48px;
    }

    .footer_grid_item{
        font-size: 14px;
        line-height: 16.94px
    }

    .footer_grid_item.mobile{
        display: block;
    }
    .footer_grid_item.desktop{
        display: none;
    }

    .grid_menu .footer_grid_item:nth-child(2){
        grid-column: 2;
        grid-row: 2;
    }

    .grid_menu .footer_grid_item:nth-child(5){
        grid-column: 2;
        grid-row: 1;
    }

    .footer_copyright{
        text-align: left;
        margin-top: 50px;
        margin-bottom: 55px;
    }
}

